--- a/Examples/iOS/AnalogSynthX/AnalogSynthX.xcodeproj/xcshareddata/xcschemes/AnalogSynthX.xcscheme
+++ b/Examples/iOS/AnalogSynthX/AnalogSynthX.xcodeproj/xcshareddata/xcschemes/AnalogSynthX.xcscheme
@@ -61,6 +61,13 @@
             ReferencedContainer = "container:AnalogSynthX.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "OS_ACTIVITY_MODE"
+            value = "disable"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
