--- a/Examples/iOS/MIDIUtility/MIDIUtility/Info.plist
+++ b/Examples/iOS/MIDIUtility/MIDIUtility/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>MIDI Monitor</string>
+	<string>MIDI Utility</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
