--- a/Frameworks/simulator.xcconfig
+++ b/Frameworks/simulator.xcconfig
@@ -1,7 +1,7 @@
 // Xcode settings for building frameworks suitable for distribution
 // Simulator slices do not need Bitcode
 
-ENABLE_BITCODE = YES
+ENABLE_BITCODE = NO
 //IPHONEOS_DEPLOYMENT_TARGET = 9.0
 
 // ARCHS = x86_64
