Get AUv2 custom GUI working
Getting an AUv2 plugin's custom GUI to actually open requires that a whole series of things match up exactly.
At this point the custom GUI is just a label, but now that it's coming up in AU Lab I can start adding controls.

--- a/Developer/AKSampler/Mac AUv2 Plugin/Plugin DSP/AKSampler_Plugin.plist
+++ b/Developer/AKSampler/Mac AUv2 Plugin/Plugin DSP/AKSampler_Plugin.plist
@@ -6,9 +6,9 @@
 	<array>
 		<dict>
 			<key>description</key>
-			<string>AKSampler AudioUnit</string>
+			<string>AKSampler AUv2</string>
 			<key>factoryFunction</key>
-			<string>AKSamplerAUFactory</string>
+			<string>AKSampler_PluginFactory</string>
 			<key>manufacturer</key>
 			<string>AKit</string>
 			<key>name</key>
