Updated references to AKSampler to point to AKAppleSampler

--- a/AudioKit/.jazzy.yaml
+++ b/AudioKit/.jazzy.yaml
@@ -180,11 +180,11 @@ custom_categories:
 
   - name: Playback Nodes
     children:
+    - AKAppleSampler
     - AKAudioPlayer
     - AKMetronome
     - AKPhaseLockedVocoder
     - AKSamplePlayer
-    - AKSampler
     - AKTimePitch
     - AKVariSpeed
 
