--- a/Developer/AKSampler/Windows VST2 Plugin/AKSamplerVST/win/AKSamplerVST.vcxproj.filters
+++ b/Developer/AKSampler/Windows VST2 Plugin/AKSamplerVST/win/AKSamplerVST.vcxproj.filters
@@ -1,15 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="VST SDK">
-      <UniqueIdentifier>{2cf8f20d-2283-420e-b20c-43b3463bd9b7}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="VST SDK\Interfaces">
-      <UniqueIdentifier>{e1279214-9805-434a-9eed-8a825ae9431f}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="VST SDK\SDK 2.4">
-      <UniqueIdentifier>{f2393ac9-5dc5-4db2-9774-10243fc0d76d}</UniqueIdentifier>
-    </Filter>
     <Filter Include="VST Plugin">
       <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
       <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
@@ -32,26 +23,17 @@
     <Filter Include="VST Plugin\Shared">
       <UniqueIdentifier>{7b82106c-606a-407a-ba62-8899e83d0aea}</UniqueIdentifier>
     </Filter>
+    <Filter Include="VST2_SDK">
+      <UniqueIdentifier>{2cf8f20d-2283-420e-b20c-43b3463bd9b7}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="VST2_SDK\pluginterfaces">
+      <UniqueIdentifier>{ad505991-f276-4da5-a3e6-c175f693d390}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="VST2_SDK\public.sdk">
+      <UniqueIdentifier>{10afc8d0-2da8-4c65-8a63-393fd27b46f1}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\vstsdk2.4\public.sdk\source\vst2.x\aeffeditor.h">
-      <Filter>VST SDK\SDK 2.4</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\vstsdk2.4\public.sdk\source\vst2.x\audioeffect.h">
-      <Filter>VST SDK\SDK 2.4</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\vstsdk2.4\public.sdk\source\vst2.x\audioeffectx.h">
-      <Filter>VST SDK\SDK 2.4</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\vstsdk2.4\pluginterfaces\vst2.x\vstfxstore.h">
-      <Filter>VST SDK\Interfaces</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\vstsdk2.4\pluginterfaces\vst2.x\aeffect.h">
-      <Filter>VST SDK\Interfaces</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\vstsdk2.4\pluginterfaces\vst2.x\aeffectx.h">
-      <Filter>VST SDK\Interfaces</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\..\..\..\AudioKit\Core\AudioKitCore\Common\ADSREnvelope.hpp">
       <Filter>Core Sampler\Common</Filter>
     </ClInclude>
@@ -97,17 +79,23 @@
     <ClInclude Include="..\source\AKSamplerParams.h">
       <Filter>VST Plugin\Shared</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\VST2_SDK\pluginterfaces\vst2.x\aeffect.h">
+      <Filter>VST2_SDK\pluginterfaces</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\VST2_SDK\pluginterfaces\vst2.x\aeffectx.h">
+      <Filter>VST2_SDK\pluginterfaces</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\VST2_SDK\public.sdk\source\vst2.x\aeffeditor.h">
+      <Filter>VST2_SDK\public.sdk</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\VST2_SDK\public.sdk\source\vst2.x\audioeffect.h">
+      <Filter>VST2_SDK\public.sdk</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\VST2_SDK\public.sdk\source\vst2.x\audioeffectx.h">
+      <Filter>VST2_SDK\public.sdk</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\vstsdk2.4\public.sdk\source\vst2.x\audioeffect.cpp">
-      <Filter>VST SDK\SDK 2.4</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\vstsdk2.4\public.sdk\source\vst2.x\audioeffectx.cpp">
-      <Filter>VST SDK\SDK 2.4</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\vstsdk2.4\public.sdk\source\vst2.x\vstplugmain.cpp">
-      <Filter>VST SDK\SDK 2.4</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\..\..\AudioKit\Core\AudioKitCore\Common\ADSREnvelope.cpp">
       <Filter>Core Sampler\Common</Filter>
     </ClCompile>
@@ -134,6 +122,15 @@
     </ClCompile>
     <ClCompile Include="..\source\AKSamplerGUI.cpp">
       <Filter>VST Plugin\GUI</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\VST2_SDK\public.sdk\source\vst2.x\audioeffect.cpp">
+      <Filter>VST2_SDK\public.sdk</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\VST2_SDK\public.sdk\source\vst2.x\audioeffectx.cpp">
+      <Filter>VST2_SDK\public.sdk</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\VST2_SDK\public.sdk\source\vst2.x\vstplugmain.cpp">
+      <Filter>VST2_SDK\public.sdk</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
