--- a/Frameworks/simulator.xcconfig
+++ b/Frameworks/simulator.xcconfig
@@ -7,5 +7,7 @@ ENABLE_BITCODE = NO
 ARCHS = x86_64
 ONLY_ACTIVE_ARCH = NO
 
+CLANG_ENABLE_MODULE_DEBUGGING = NO
+
 CODE_SIGNING_REQUIRED = NO
 CODE_SIGN_IDENTITY =
