--- a/Frameworks/simulator.xcconfig
+++ b/Frameworks/simulator.xcconfig
@@ -4,7 +4,8 @@
 ENABLE_BITCODE = NO
 //IPHONEOS_DEPLOYMENT_TARGET = 9.0
 
-ARCHS = x86_64
+// We still need i386 for iOS 9, unfortunately
+//ARCHS = x86_64
 ONLY_ACTIVE_ARCH = NO
 
 CLANG_ENABLE_MODULE_DEBUGGING = NO
