--- a/AudioUnits/iOS/Instruments/AKOscillatorBankExtension/Info.plist
+++ b/AudioUnits/iOS/Instruments/AKOscillatorBankExtension/Info.plist
@@ -30,11 +30,11 @@
 					<key>description</key>
 					<string>Oscillator Synth</string>
 					<key>factoryFunction</key>
-					<string>$(PRODUCT_MODULE_NAME).AudioUnitViewController</string>
+					<string>$(PRODUCT_MODULE_NAME).AKOscillatorBankViewController</string>
 					<key>manufacturer</key>
 					<string>AuKt</string>
 					<key>name</key>
-					<string>AudioKit: AKOscillator</string>
+					<string>AudioKit: Oscillator</string>
 					<key>sandboxSafe</key>
 					<true/>
 					<key>subtype</key>
